chore(node): use node 15.x for engines

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "private": true,
   "engines": {
-    "node": ">=14.9.0"
+    "node": "15.x"
   },
   "scripts": {
     "eject": "react-scripts eject",
