refactor(deps): use optionalDependencies

--- a/server/package.json
+++ b/server/package.json
@@ -96,11 +96,8 @@
     "@types/supertest": "2.0.10",
     "@types/validator": "13.1.0",
     "@types/yargs": "15.0.9",
-    "autocannon": "6.5.0",
-    "clinic": "7.0.0",
     "cross-env": "7.0.2",
     "dotenv-flow": "3.2.0",
-    "express-list-endpoints": "5.0.0",
     "ioredis-mock": "5.0.0",
     "jest": "26.6.1",
     "nodemon": "2.0.6",
@@ -108,5 +105,10 @@
     "pm2": "4.5.0",
     "supertest": "5.0.0",
     "typescript": "4.0.3"
+  },
+  "optionalDependencies": {
+    "autocannon": "6.5.0",
+    "clinic": "7.0.0",
+    "express-list-endpoints": "5.0.0"
   }
 }
