--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,10 @@
     "lighthouse": "sh ./bin/lighthouse.sh"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
