--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "@opentelemetry/plugin-pg-pool": "0.10.0",
     "@opentelemetry/tracing": "0.12.0",
     "@sentry/node": "5.27.1",
+    "axios": "0.21.0",
     "body-parser": "1.19.0",
     "connect-timeout": "1.9.0",
     "cors": "2.8.5",
