feat(server): add circuit breaker

--- a/server/package.json
+++ b/server/package.json
@@ -62,6 +62,7 @@
     "knex": "0.21.8",
     "lodash.uniq": "4.5.0",
     "network-error-logging": "1.2.1",
+    "opossum": "git://github.com/nodeshift/opossum#c5ca2187f137f11aeeeffe1fe83caf3d785fbbb4",
     "pg": "8.4.2",
     "pino": "6.7.0",
     "pino-http": "5.3.0",
@@ -90,6 +91,7 @@
     "@types/jest": "26.0.15",
     "@types/lodash.uniq": "4.5.6",
     "@types/node": "14.14.5",
+    "@types/opossum": "4.1.1",
     "@types/pino-http": "5.0.5",
     "@types/response-time": "2.3.4",
     "@types/serve-favicon": "2.5.1",
