--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@opentelemetry/exporter-collector": "0.12.0",
     "@opentelemetry/metrics": "0.12.0",
     "@opentelemetry/node": "0.12.0",
+    "@opentelemetry/plugin-dns": "0.10.0",
     "@opentelemetry/plugin-express": "0.10.0",
     "@opentelemetry/plugin-http": "0.12.0",
     "@opentelemetry/plugin-https": "0.12.0",
