--- a/server/package.json
+++ b/server/package.json
@@ -57,7 +57,7 @@
     "faker": "5.1.0",
     "graphql": "15.4.0",
     "graphql-subscriptions": "1.1.0",
-    "graphql-transport-ws": "1.9.0",
+    "graphql-ws": "1.9.1",
     "helmet": "4.1.1",
     "ioredis": "4.19.2",
     "knex": "0.21.9",
