feat(prometheus): add prometheus metrics script

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "docker:up": "docker-compose -f docker-compose.development.yml up -d",
     "docker:stop": "docker-compose -f docker-compose.development.yml stop",
     "docker:down": "docker-compose -f docker-compose.development.yml down --volumes",
-    "docker:delete": "docker system prune"
+    "docker:delete": "docker system prune",
+    "prometheus": "curl http://localhost:9464/metrics"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
