--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "@godaddy/terminus": "4.4.1",
     "@opentelemetry/api": "0.12.0",
     "@opentelemetry/exporter-collector": "0.12.0",
+    "@opentelemetry/instrumentation-graphql": "0.11.0",
     "@opentelemetry/metrics": "0.12.0",
     "@opentelemetry/node": "0.12.0",
     "@opentelemetry/plugin-dns": "0.10.0",
