--- a/server/package.json
+++ b/server/package.json
@@ -63,6 +63,7 @@
     "ioredis": "4.19.2",
     "knex": "0.21.12",
     "lodash.uniq": "4.5.0",
+    "multer": "1.4.2",
     "network-error-logging": "1.2.1",
     "opossum": "git://github.com/nodeshift/opossum#c5ca2187f137f11aeeeffe1fe83caf3d785fbbb4",
     "pg": "8.5.0",
@@ -92,6 +93,7 @@
     "@types/ioredis": "4.17.7",
     "@types/jest": "26.0.15",
     "@types/lodash.uniq": "4.5.6",
+    "@types/multer": "1.4.4",
     "@types/node": "14.14.7",
     "@types/opossum": "4.1.1",
     "@types/pino-http": "5.0.5",
