feat(server): sign in by JWT token

--- a/server/.env.production.local.example
+++ b/server/.env.production.local.example
@@ -5,6 +5,9 @@ PORT=5000
 PM2_PUBLIC_KEY=$PM2_PUBLIC_KEY
 PM2_SECRET_KEY=$PM2_SECRET_KEY
 
+# JWT
+JWT_SECRET=$JWT_SECRET
+
 # Lightstep
 LIGHTSTEP_TOKEN=$LIGHTSTEP_TOKEN
 
