--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "@opentelemetry/tracing": "0.12.0",
     "@sentry/node": "5.27.4",
     "axios": "0.21.0",
+    "bcrypt": "5.0.0",
     "body-parser": "1.19.0",
     "connect-timeout": "1.9.0",
     "cookie-parser": "1.4.5",
@@ -56,6 +57,7 @@
     "dataloader": "2.0.0",
     "express": "5.0.0-alpha.8",
     "express-graphql": "0.11.0",
+    "express-jwt": "6.0.0",
     "express-request-id": "1.4.1",
     "faker": "5.1.0",
     "graphql": "15.4.0",
@@ -63,6 +65,7 @@
     "graphql-ws": "1.13.0",
     "helmet": "4.2.0",
     "ioredis": "4.19.2",
+    "jsonwebtoken": "8.5.1",
     "knex": "0.21.12",
     "lodash.uniq": "4.5.0",
     "multer": "1.4.2",
@@ -85,17 +88,20 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-typescript": "7.12.1",
     "@types/autocannon": "4.1.0",
+    "@types/bcrypt": "3.0.0",
     "@types/connect-timeout": "0.0.34",
     "@types/cookie-parser": "1.4.2",
     "@types/cors": "2.8.8",
     "@types/csurf": "1.11.0",
     "@types/dotenv-flow": "3.1.0",
     "@types/express": "4.17.9",
+    "@types/express-jwt": "0.0.42",
     "@types/express-list-endpoints": "4.0.1",
     "@types/express-request-id": "1.4.1",
     "@types/faker": "5.1.4",
     "@types/ioredis": "4.17.7",
     "@types/jest": "26.0.15",
+    "@types/jsonwebtoken": "8.5.0",
     "@types/lodash.uniq": "4.5.6",
     "@types/multer": "1.4.4",
     "@types/node": "14.14.7",
