--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,19 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "expo": "39.0.4",
+    "expo-status-bar": "1.0.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "0.14.8"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~3.9.5"
+    "@babel/core": "7.12.3",
+    "@types/react": "16.9.56",
+    "@types/react-dom": "16.9.9",
+    "@types/react-native": "0.63.35",
+    "typescript": "4.0.5"
   },
   "private": true
 }
