chore(package): add url for repository type

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "Hongbo Miao",
     "magic"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hongbo-Miao/hongbomiao.com"
+  },
   "private": true,
   "engines": {
     "node": "15.x"
