--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,10 @@
 {
+  "name": "mobile",
   "main": "node_modules/expo/AppEntry.js",
+  "private": true,
+  "engines": {
+    "node": "15.x"
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -21,6 +26,5 @@
     "@types/react-dom": "16.9.9",
     "@types/react-native": "0.63.35",
     "typescript": "4.0.5"
-  },
-  "private": true
+  }
 }
