--- a/server/package.json
+++ b/server/package.json
@@ -80,6 +80,7 @@
     "serve-favicon": "2.5.0",
     "spdy": "4.0.2",
     "validator": "13.1.17",
+    "ws": "7.4.0",
     "yargs": "16.1.1"
   },
   "devDependencies": {
@@ -112,6 +113,7 @@
     "@types/spdy": "3.4.4",
     "@types/supertest": "2.0.10",
     "@types/validator": "13.1.0",
+    "@types/ws": "7.4.0",
     "@types/yargs": "15.0.10",
     "cross-env": "7.0.2",
     "dotenv-flow": "3.2.0",
