build(github): skip test on master

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,6 @@
 name: Test
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -15,7 +13,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.1'
+          node-version: '15.x'
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
@@ -34,7 +32,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.1'
+          node-version: '15.x'
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
@@ -52,7 +50,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.1'
+          node-version: '15.x'
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
@@ -70,7 +68,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.1'
+          node-version: '15.x'
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
@@ -89,7 +87,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.1'
+          node-version: '15.x'
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
@@ -111,7 +109,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.1'
+          node-version: '15.x'
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
@@ -134,7 +132,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '15.2.1'
+          node-version: '15.x'
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
