chore(mobile): change start to dev

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,7 +6,7 @@
     "node": "15.x"
   },
   "scripts": {
-    "start": "expo start",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
