--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "6.15.0",
-    "eslint-nibble": "6.0.0",
     "eslint-plugin-cypress": "2.11.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.1.3",
@@ -80,5 +79,8 @@
     "stylelint-high-performance-animation": "1.5.2",
     "stylelint-prettier": "1.1.2",
     "typescript": "4.0.5"
+  },
+  "optionalDependencies": {
+    "eslint-nibble": "6.0.0"
   }
 }
