chore(deps): update prod docker-compose based on dev version

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -33,6 +33,8 @@ services:
       - "/app/node_modules"
     logging:
       driver: fluentd
+      options:
+        fluentd-address: localhost:24224
     restart: on-failure
     ports:
       - "5000:5000"
@@ -54,7 +56,7 @@ services:
   # PostgreSQL
   postgres:
     container_name: hm_postgres
-    image: postgres:13.0-alpine
+    image: postgres:13.1-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -67,7 +69,7 @@ services:
   # Fluent Bit
   fluent-bit:
     container_name: hm_fluent_bit
-    image: fluent/fluent-bit:1.6.2
+    image: fluent/fluent-bit:1.6.5
     volumes:
       - ./docker/fluent-bit/conf:/fluent-bit/etc
     logging:
@@ -159,7 +161,7 @@ services:
   elasticsearch:
     container_name: hm_elasticsearch
     # https://www.docker.elastic.co/r/elasticsearch/elasticsearch-oss
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.9.3
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.0
     environment:
       - discovery.type=single-node
     restart: on-failure
@@ -170,7 +172,7 @@ services:
   kibana:
     container_name: hm_kibana
     # https://www.docker.elastic.co/r/kibana/kibana-oss
-    image: docker.elastic.co/kibana/kibana-oss:7.9.3
+    image: docker.elastic.co/kibana/kibana-oss:7.10.0
     restart: on-failure
     ports:
       - 5601:5601
@@ -178,7 +180,7 @@ services:
   # Prometheus
   prometheus:
     container_name: hm_prometheus
-    image: prom/prometheus:v2.22.0
+    image: prom/prometheus:v2.22.2
     volumes:
       - ./docker/prometheus/prometheus.production.yaml:/etc/prometheus/prometheus.yml
     restart: on-failure
@@ -188,14 +190,14 @@ services:
   # Grafana
   grafana:
     container_name: hm_grafana
-    image: grafana/grafana:7.3.0
+    image: grafana/grafana:7.3.3
     environment:
       # https://grafana.com/grafana/plugins
       - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel
     restart: on-failure
     ports:
       - "3000:3000"
-   depends_on:
+    depends_on:
       - prometheus
 
 # For persistence between restarts
