feat(mobile): add debug script

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,7 +10,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "debug": "open \"rndebugger://set-debugger-loc?host=localhost&port=19001\""
   },
   "dependencies": {
     "expo": "39.0.4",
