feat(mobile): font style

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,7 +14,9 @@
     "debug": "open \"rndebugger://set-debugger-loc?host=localhost&port=19001\""
   },
   "dependencies": {
+    "@expo-google-fonts/open-sans": "0.1.0",
     "expo": "39.0.4",
+    "expo-font": "8.3.0",
     "expo-status-bar": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
