--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,13 +14,16 @@
     "debug": "open \"rndebugger://set-debugger-loc?host=localhost&port=19001\""
   },
   "dependencies": {
+    "@eva-design/eva": "2.0.0",
     "@expo-google-fonts/open-sans": "0.1.0",
+    "@ui-kitten/components": "5.0.0",
     "expo": "39.0.4",
     "expo-font": "8.3.0",
     "expo-status-bar": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-svg": "12.1.0",
     "react-native-web": "0.14.8"
   },
   "devDependencies": {
