lint(mobile): add lint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           cd web && yarn install --frozen-lockfile
+          cd ../mobile && yarn install --frozen-lockfile
           cd ../server && yarn install --frozen-lockfile
       - name: Lint
         run: |
