--- a/web/package.json
+++ b/web/package.json
@@ -58,6 +58,7 @@
     "@sentry/react": "5.27.6",
     "analytics": "0.6.0",
     "bulma": "0.9.1",
+    "classnames": "2.2.6",
     "graphql": "15.4.0",
     "graphql-tag": "2.11.0",
     "graphql-ws": "2.0.0",
@@ -66,6 +67,7 @@
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "react-use": "15.3.4",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-observable": "1.2.0",
@@ -101,6 +103,7 @@
     "@testing-library/react": "11.2.2",
     "@testing-library/react-hooks": "3.4.2",
     "@testing-library/user-event": "12.2.2",
+    "@types/classnames": "2.2.11",
     "@types/jest": "26.0.15",
     "@types/node": "14.14.9",
     "@types/react": "17.0.0",
