--- a/server/package.json
+++ b/server/package.json
@@ -58,6 +58,8 @@
     "express-request-id": "1.4.1",
     "faker": "5.1.0",
     "graphql": "15.4.0",
+    "graphql-middleware": "4.0.2",
+    "graphql-shield": "7.4.2",
     "graphql-subscriptions": "1.1.0",
     "graphql-ws": "2.0.0",
     "helmet": "4.2.0",
