refactor(app): ignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,30 @@
 # https://docs.docker.com/engine/reference/builder/#dockerignore-file
 
-node_modules
-dist
-coverage
-tmp
+.idea
+
+**/.DS_Store
+**/.env.development.local
+**/.env.production.local
+**/hongbomiao.crt
+**/hongbomiao.key
+**/node_modules
+**/yarn-error.log
+
+web/.eslintcache
+web/.lighthouseci
+web/build
+web/coverage
+web/public/sitemap.xml
+web/storybook-static
+web/tmp
+
+mobile/.expo
+
+server/.clinic
+server/build
+server/dist
+
+cypress/fixtures/example.json
+cypress/screenshots
+
+locust/__pycache__
