--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,29 @@
-.clinic
-.lighthouseci
-build
-web/src/shared/libs
-coverage
-dist
+.idea
+
+.DS_Store
+.env.development.local
+.env.production.local
+hongbomiao.crt
+hongbomiao.key
 node_modules
-storybook-static
+yarn-error.log
+
+web/.eslintcache
+web/.lighthouseci
+web/build
+web/coverage
+web/public/sitemap.xml
+web/src/shared/libs
+web/storybook-static
+web/tmp
+
+mobile/.expo
+
+server/.clinic
+server/build
+server/dist
+
+cypress/fixtures/example.json
+cypress/screenshots
+
+locust/__pycache__
