--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,30 @@
 # https://docs.github.com/en/github/using-git/ignoring-files
 
-# Dependencies
-.pnp.js
-/.pnp
-node_modules
-
-# Mobile
-.expo
-
-# Testing
-.clinic
-.lighthouseci
-coverage
-cypress/screenshots
-cypress/fixtures/example.json
-
-# Production
-build
-web/public/sitemap.xml
-dist
-storybook-static
-tmp
-
-# Misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-.eslintcache
-
-# IDE
 .idea
 
-# SSL
+.DS_Store
+.env.development.local
+.env.production.local
 hongbomiao.crt
 hongbomiao.key
+node_modules
+yarn-error.log
 
-# Python
-__pycache__
+web/.eslintcache
+web/.lighthouseci
+web/build
+web/coverage
+web/public/sitemap.xml
+web/storybook-static
+web/tmp
+
+mobile/.expo
+
+server/.clinic
+server/build
+server/dist
+
+cypress/fixtures/example.json
+cypress/screenshots
+
+locust/__pycache__
