--- a/package.json
+++ b/package.json
@@ -32,13 +32,7 @@
     "test:coverage:publish": "cat coverage/lcov.info | codecov",
     "test:cypress:gui": "cypress open --config-file ./cypress/cypress.json",
     "test:cypress:headless": "cypress run --config-file ./cypress/cypress.json",
-    "test:cypress:headless:ci": "sh ./bin/testCypressHeadlessCI.sh",
-    "docker:build": "docker-compose -f docker-compose.development.yml build",
-    "docker:up": "docker-compose -f docker-compose.development.yml up -d",
-    "docker:stop": "docker-compose -f docker-compose.development.yml stop",
-    "docker:down": "docker-compose -f docker-compose.development.yml down --volumes",
-    "docker:delete": "docker system prune",
-    "prometheus": "curl http://localhost:9464/metrics"
+    "test:cypress:headless:ci": "sh ./bin/testCypressHeadlessCI.sh"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
