--- a/server/package.json
+++ b/server/package.json
@@ -69,7 +69,7 @@
     "lodash.uniq": "4.5.0",
     "multer": "1.4.2",
     "network-error-logging": "1.2.1",
-    "opossum": "git://github.com/nodeshift/opossum#c5ca2187f137f11aeeeffe1fe83caf3d785fbbb4",
+    "opossum": "5.0.2",
     "pg": "8.5.1",
     "pino": "6.7.0",
     "pino-http": "5.3.0",
