feat(docker): watch code change when dev

--- a/Dockerfile.nginx.development
+++ b/Dockerfile.nginx.development
@@ -1,6 +1,6 @@
 FROM nginx:1.19.5-alpine
 
-COPY ./docker/nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY server/private/ssl/hongbomiao.crt.example /etc/ssl/hongbomiao.crt
+COPY server/private/ssl/hongbomiao.key.example /etc/ssl/hongbomiao.key
 
-COPY ./server/private/ssl/hongbomiao.crt /etc/ssl/hongbomiao.crt
-COPY ./server/private/ssl/hongbomiao.key /etc/ssl/hongbomiao.key
+COPY docker/nginx/default.conf /etc/nginx/conf.d/default.conf
