--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clean": "sh ./bin/clean.sh",
     "build": "sh ./bin/build.sh",
     "start": "cd server && yarn serve:production",
-    "start:development": "cd server && yarn serve:development",
+    "dev": "cd server && yarn dev",
     "lint:js": "eslint . --ext .js,.ts,.tsx",
     "lint:js:report": "eslint-nibble . --ext .js,.ts,.tsx",
     "lint:js:fix": "eslint . --ext .js,.ts,.tsx --fix",
