refactor(app): remove local https

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,29 +1,12 @@
-# Redirect http traffic to https
-server {
-  server_name hm_http_server;
-
-  listen 80 default_server;
-  listen [::]:80 default_server;
-
-  return 301 https://$host$request_uri;
+upstream hongbomiao {
+  server hm_server:5000;
 }
 
 server {
-  server_name hm_https_server;
-
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_certificate /etc/ssl/hongbomiao.crt;
-  ssl_certificate_key /etc/ssl/hongbomiao.key;
+  listen 80 default_server;
+  listen [::]:80 default_server;
 
   location / {
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Server $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_pass https://hm_server:5000;
+    proxy_pass http://hongbomiao;
   }
 }
