--- a/web/package.json
+++ b/web/package.json
@@ -6,16 +6,16 @@
   },
   "scripts": {
     "eject": "react-scripts eject",
-    "dev": "HTTPS=true react-scripts start",
+    "dev": "react-scripts start",
     "prebuild": "sh ./bin/prebuild.sh",
     "build": "react-scripts build",
     "postbuild": "sh ./bin/postbuild.sh",
-    "serve": "serve build --listen 8080 --ssl-cert ./private/ssl/hongbomiao.crt --ssl-key ./private/ssl/hongbomiao.key",
+    "serve": "serve build --listen 8080",
     "analyze": "react-scripts build && source-map-explorer 'build/static/js/*.js'",
     "test": "react-scripts test --watchAll=false",
     "test:watch": "react-scripts test",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
-    "storybook": "start-storybook --static-dir public --port 9009 --https --ssl-cert ./private/ssl/hongbomiao.crt --ssl-key ./private/ssl/hongbomiao.key",
+    "storybook": "start-storybook --static-dir public --port 9009",
     "storybook:build": "build-storybook -s public",
     "storybook:publish": "chromatic --build-script-name storybook:build",
     "lighthouse": "sh ./bin/lighthouse.sh"
