build(app): add HTTP_PROTOCOL and WEBSOCKET_PROTOCOL

--- a/web/.env.production
+++ b/web/.env.production
@@ -1,4 +1,6 @@
 GENERATE_SOURCEMAP=false
 
+REACT_APP_SERVER_HTTP_PROTOCOL=https
+REACT_APP_SERVER_WS_PROTOCOL=wss
 REACT_APP_SERVER_HOST=www.hongbomiao.com
 REACT_APP_SERVER_PORT=443
