--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "commit": "commit",
+    "postinstall": "husky install",
     "setup": "sh ./bin/setup.sh",
     "clean": "sh ./bin/clean.sh",
     "build": "sh ./bin/build.sh",
@@ -59,7 +60,7 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-security": "1.4.0",
     "eslint-plugin-testing-library": "3.10.1",
-    "husky": "4.3.0",
+    "husky": "5.0.4",
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
     "nyc": "15.1.0",
