feat(security): limit GraphQL depth

--- a/server/package.json
+++ b/server/package.json
@@ -58,6 +58,7 @@
     "express-request-id": "1.4.1",
     "faker": "5.1.0",
     "graphql": "15.4.0",
+    "graphql-depth-limit": "1.1.0",
     "graphql-middleware": "6.0.1",
     "graphql-shield": "7.5.0",
     "graphql-subscriptions": "1.1.0",
@@ -99,6 +100,7 @@
     "@types/express-list-endpoints": "4.0.1",
     "@types/express-request-id": "1.4.1",
     "@types/faker": "5.1.5",
+    "@types/graphql-depth-limit": "1.1.2",
     "@types/ioredis": "4.17.11",
     "@types/jest": "26.0.20",
     "@types/jsonwebtoken": "8.5.0",
