--- a/server/package.json
+++ b/server/package.json
@@ -60,6 +60,7 @@
     "graphql": "15.4.0",
     "graphql-depth-limit": "1.1.0",
     "graphql-middleware": "6.0.1",
+    "graphql-query-complexity": "0.7.2",
     "graphql-shield": "7.5.0",
     "graphql-subscriptions": "1.1.0",
     "graphql-ws": "4.1.0",
