--- a/server/package.json
+++ b/server/package.json
@@ -63,6 +63,7 @@
     "graphql-query-complexity": "0.7.2",
     "graphql-shield": "7.5.0",
     "graphql-subscriptions": "1.1.0",
+    "graphql-upload": "11.0.0",
     "graphql-ws": "4.1.0",
     "helmet": "4.3.1",
     "ioredis": "4.19.4",
@@ -102,6 +103,7 @@
     "@types/express-request-id": "1.4.1",
     "@types/faker": "5.1.5",
     "@types/graphql-depth-limit": "1.1.2",
+    "@types/graphql-upload": "8.0.4",
     "@types/ioredis": "4.17.11",
     "@types/jest": "26.0.20",
     "@types/jsonwebtoken": "8.5.0",
