--- a/.mergify.yml
+++ b/.mergify.yml
@@ -11,7 +11,7 @@ pull_request_rules:
       - check-success=Web - Lighthouse
       - check-success=Web - Storybook
       - check-success=Cypress
-      - base=master
+      - base=main
       - label!=work in progress
     actions:
       merge:
@@ -28,7 +28,7 @@ pull_request_rules:
       - check-success=Web - Lighthouse
       - check-success=Web - Storybook
       - check-success=Cypress
-      - base=master
+      - base=main
     actions:
       merge:
         method: merge
