refactor(cypress): move cypress  packages to its own folder

--- a/.dockerignore
+++ b/.dockerignore
@@ -22,7 +22,7 @@ server/.clinic
 server/build
 server/dist
 
-cypress/fixtures/example.json
-cypress/screenshots
+cypress/cypress/fixtures/example.json
+cypress/cypress/screenshots
 
 locust/__pycache__
