--- a/package.json
+++ b/package.json
@@ -28,24 +28,19 @@
     "lint:css": "stylelint \"**/*.css\" \"!**/build/**\" \"!**/dist/**\" \"!**/coverage/**\"",
     "lint:css:fix": "stylelint \"**/*.css\" \"!**/build/**\" \"!**/dist/**\" \"!**/coverage/**\" --fix",
     "test": "cd web && yarn test && cd ../server && yarn test",
-    "test:coverage": "sh ./bin/testCoverage.sh",
-    "test:coverage:publish": "cat coverage/lcov.info | codecov",
-    "test:cypress:gui": "cypress open --config-file ./cypress/cypress.json",
-    "test:cypress:headless": "cypress run --config-file ./cypress/cypress.json",
-    "test:cypress:headless:ci": "sh ./bin/testCypressHeadlessCI.sh"
+    "test:coverage": "sh bin/testCoverage.sh",
+    "test:coverage:publish": "cat coverage/lcov.info | codecov"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
     "@commitlint/prompt-cli": "11.0.0",
-    "@cypress/skip-test": "2.6.0",
     "@types/node": "14.14.22",
     "@typescript-eslint/eslint-plugin": "4.14.0",
     "@typescript-eslint/parser": "4.14.0",
     "codecov": "3.8.1",
     "commitizen": "4.2.3",
     "cross-env": "7.0.3",
-    "cypress": "6.3.0",
     "eslint": "7.18.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-base": "14.2.1",
@@ -64,7 +59,6 @@
     "lint-staged": "10.5.3",
     "nyc": "15.1.0",
     "prettier": "2.2.1",
-    "start-server-and-test": "1.11.7",
     "stylelint": "13.9.0",
     "stylelint-a11y": "1.2.3",
     "stylelint-config-prettier": "8.0.2",
