--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ server/.clinic
 server/build
 server/dist
 
-cypress/fixtures/example.json
-cypress/screenshots
+cypress/cypress/fixtures/example.json
+cypress/cypress/screenshots
 
 locust/__pycache__
