--- a/cypress/package.json
+++ b/cypress/package.json
@@ -5,8 +5,8 @@
     "node": "14.x"
   },
   "scripts": {
-    "test:cypress:gui": "cypress open --config-file ./cypress/cypress.json",
-    "test:cypress:headless": "cypress run --config-file ./cypress/cypress.json",
+    "test:cypress:gui": "cypress open --config-file ./cypress.json",
+    "test:cypress:headless": "cypress run --config-file ./cypress.json",
     "test:cypress:headless:ci": "sh ./bin/testCypressHeadlessCI.sh"
   },
   "devDependencies": {
