--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -30,7 +30,7 @@ services:
     logging:
       driver: fluentd
       options:
-        fluentd-address: localhost:24224
+        fluentd-address: 0.0.0.0:24224
     restart: always
     ports:
       - "5000:5000"
