--- a/Dockerfile.server.development
+++ b/Dockerfile.server.development
@@ -13,14 +13,17 @@ RUN cd web && yarn install
 RUN cd server && yarn install
 
 # Build web
-COPY web/.env.development.local.example web/.env.development.local
+# https://create-react-app.dev/docs/adding-custom-environment-variables/
+# In create-react-app, when you run 'yarn build' to make a production bundle, it is always equal to 'production'.
+# So using REACT_APP_SERVER_WS_PROTOCOL=ws in .env.production.local.example
+COPY web/.env.production.local.example web/.env.production.local
 COPY web web
 # Skip lint check during react-scripts build
 RUN rm -f web/.eslintrc.js
 RUN cd web && cross-env REACT_APP_LIGHTSTEP_TOKEN="$REACT_APP_LIGHTSTEP_TOKEN" yarn build
 
 # Build server
-COPY server/.env.development.local.example server/.env.development.local
+COPY server/.env.development.local.example.docker server/.env.development.local
 COPY server server
 RUN cp -r web/build/ server/dist/
 
