--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "baseUrl": "../node_modules",
     "esModuleInterop": true,
     "target": "es5",
     "lib": ["es5", "dom"],
