refactor(web): lighthouse command

--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,7 @@
     "storybook": "start-storybook --static-dir public --port 9009",
     "storybook:build": "build-storybook -s public",
     "storybook:publish": "chromatic --build-script-name storybook:build",
-    "lighthouse": "sh ./bin/lighthouse.sh"
+    "lighthouse": "lhci autorun"
   },
   "eslintConfig": {
     "extends": [
