build(github): update docker job name

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,8 +5,8 @@ on:
     branches: [ main ]
 
 jobs:
-  lint:
-    name: Docker
+  push:
+    name: Push to Docker Hub
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
